Fix issue with unaligned navbar

--- a/common/css/site.css
+++ b/common/css/site.css
@@ -17,8 +17,8 @@ a.nav-link {
 }
 
 .nav-item.middle-nav-item {
-    border: 2px solid #353432;
+    border: 2px solid #575755;
     border-radius: 5px;
-    background: #353432;
+    background: #575755;
     font-size: x-large;
 }
